tests/config.ts.out
[WILDCARD]Unsupported compiler options in "[WILDCARD]config.tsconfig.json"
  The following options were ignored:
    module, target
[WILDCARD]tests/config.ts:3:5 - error TS2532: Object is possibly 'undefined'.

3 if (map.get("bar").foo) {
      ~~~~~~~~~~~~~~

